@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-0-11
+DATE: 10/13/2010
+STAFF: sc
+CHANGES:
+1) TR10413/msp/QC_MS_AttrEdit.py
+
 TAG: qcreports_db-4-4-0-10
 DATE: 10/12/2010
 STAFF: lec
